--- a/about.html
+++ b/about.html
@@ -74,13 +74,22 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid shadow p-3 mb-5 bg-body rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            class="img-fluid shadow p-3 mb-5 bg-body rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid shadow p-3 mb-5 bg-body rounded"
+          />
         </div>
       </div>
     </div>
