--- a/index.html
+++ b/index.html
@@ -65,19 +65,25 @@
       </div>
     </nav>
 
-    <h2 class="text-center">👋 Hi I am</h2>
+    <h2 class="text-center">👋 Hi I am ,</h2>
     <h1 class="text-center">Yerani Kingston</h1>
     <h3 class="text-center">
-      🇲🇽 Front-end developer, based in Guadalajara, Jalisco.
+      Front-end developer based in Guadalajara, Jalisco 🇲🇽
     </h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact Me"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About Me">About me</a>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row mt-5">
         <div class="col-sm-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid rounded projectimage"
+            alt="yoga App"
+          />
         </div>
         <div class="col-sm-6">
           <h2 class="text-left">Yoga App</h2>
@@ -88,42 +94,57 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga App"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
-    </div>
-    <div class="row mt-5">
-      <div class="col-sm-6">
-        <h2 class="text-left">Weather App</h2>
-        <p class="text-left">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-          quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-          eos eveniet alias temporibus deserunt veritatis minima fugiat
-          explicabo eum dolore.
-        </p>
-        <div class="mt-5">
-          <a href="#" class="primary-link">Launch Weather App</a>
+
+      <div class="row mt-5">
+        <div class="col-sm-6">
+          <h2 class="text-left">Weather App</h2>
+          <p class="text-left">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link" title="Weather App"
+              >Launch Weather App</a
+            >
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded projectimage"
+            alt="weather App"
+          />
         </div>
       </div>
-      <div class="col-sm-6">
-        <img src="images/weather.png" class="img-fluid rounded" />
-      </div>
-    </div>
-    <div class="row mt-5">
-      <div class="col-sm-6">
-        <img src="images/yogurt.png" class="img-fluid rounded" />
-      </div>
-      <div class="col-sm-6">
-        <h2 class="text-left">Yogurt App</h2>
-        <p class="text-left">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-          quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-          eos eveniet alias temporibus deserunt veritatis minima fugiat
-          explicabo eum dolore.
-        </p>
-        <div class="mt-5">
-          <a href="#" class="primary-link">Launch Yogurt App</a>
+      <div class="row mt-5">
+        <div class="col-sm-6">
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded projectimage"
+            alt="yogurt App"
+          />
+        </div>
+        <div class="col-sm-6">
+          <h2 class="text-left">Yogurt App</h2>
+          <p class="text-left">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link" title="Yogurt App"
+              >Launch Yogurt App</a
+            >
+          </div>
         </div>
       </div>
     </div>
